<resources>
    <string name="app_name">quizdroid</string>

    <string name="welcome_msg">Welcome to QuizDroid!</string>
    <string name="topic_msg">Choose a topic:</string>

    <string name="begin_btn">Begin</string>
    <string name="submit_btn">Submit</string>
    <string name="next_btn">Next</string>
    <string name="finish_btn">Finish</string>

    <string name="question_count">Question %d of %d</string>
    <string name="current_score">You have %d out of %d correct so far.</string>
    <string name="final_score">Great job! You have reached the end of the quiz.\nYou got %d out of %d correct!</string>

    <string name="common_description_msg">Good luck!\n\nTotal Questions:</string>

    <string name="next_finish_btn_description">Next button if there are more questions, Finish button if last question is reached.</string>

    <string name="preferences">Preferences</string>
    <string name="url_placeholder">URL for question data</string>
    <string name="check_download_placeholder">Check new downloads every __ mins</string>
    <string name="save_preferences">Save Preferences</string>

    <string name="quizdroid">Quizdroid</string>
</resources>