<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        style="@style/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/preferencesTextView"
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences" />

        <EditText
            android:id="@+id/preferencesUrl"
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url_placeholder"
            android:inputType="text" />

        <EditText
            android:id="@+id/preferencesInterval"
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/check_download_placeholder"
            android:inputType="number" />

        <Button
            android:id="@+id/savePreferencesBtn"
            style="@style/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_preferences" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>